feat: created css file for reusable rules

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,3 +1,19 @@
 @import 'tailwindcss';
-@plugin '@tailwindcss/forms';
-@plugin '@tailwindcss/typography';
+/* @plugin '@tailwindcss/forms';
+@plugin '@tailwindcss/typography'; */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  /* background: #000; */
+  overflow: hidden;
+}
+
+
