--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -9,11 +9,66 @@
   text-rendering: optimizeLegibility;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  /* background: #000; */
-  overflow: hidden;
+/* Цвет выделения текста */
+::selection {
+  background: #90fba4;
+  color: #001401;
 }
 
+/* Glitch */
+.glitch {
+  position: relative;
+  display: inline-block;
+}
+/* Создаем дубликаты через атрибут data-text */
+.glitch::before,
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* Цвет фона терминала */
+  background: black;
+}
+/* Красный слой со сдвигом */
+.glitch::before {
+  left: 2px;
+  text-shadow: -2px 0 #ff00c1;
+  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+  animation: glitch-anim-1 2s infinite linear alternate-reverse;
+}
+/* Синий слой со сдвигом */
+.glitch::after {
+  left: -2px;
+  text-shadow: -2px 0 #00fff9;
+  clip-path: polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
+  animation: glitch-anim-2 3s infinite linear alternate-reverse;
+}
+@keyframes glitch-anim-1 {
+  0% {
+    clip-path: inset(20% 0 30% 0);
+  }
 
+  20% {
+    clip-path: inset(60% 0 10% 0);
+  }
+
+  100% {
+    clip-path: inset(80% 0 5% 0);
+  }
+}
+@keyframes glitch-anim-2 {
+  0% {
+    clip-path: inset(10% 0 85% 0);
+  }
+
+  50% {
+    clip-path: inset(45% 0 45% 0);
+  }
+
+  100% {
+    clip-path: inset(15% 0 70% 0);
+  }
+}
